# Neuromeka

src/controller/mpc/: CMakeLists.txt  package.xml
src/controller/mpc/include/mpc/: MPC.hpp  RequiredHeaders.hpp  demo.hpp
src/controller/mpc/src/: MPC.cpp  MPCExample.cpp  Main.cpp  demo.cpp
src/osqp/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  osqp-targets.cmake  osqpstatic-targets.cmake
src/osqp/algebra/: Makefile  cmake_install.cmake
src/osqp/algebra/builtin/: Makefile  cmake_install.cmake
src/osqp/include/: Makefile  cmake_install.cmake
src/osqp/include/public/: osqp_configure.h
src/osqp/src/: Makefile  cmake_install.cmake
